[package]
name = "crossdb"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "CrossDB Rust Driver"
readme = "README.md"
homepage = "hhttps://github.com/crossdb-org/crossdb-rust"
repository = "https://github.com/crossdb-org/crossdb-rust.git"

[dependencies]
lru = "0.14"
serde = "1.0"
thiserror = "2.0"
strum = { version = "0.27", features = ["derive"] }
cidr = "0.3"
mac_address = "1.1"

[build-dependencies]
bindgen = "0.71"
cc = "1.2"
